  to cover the whole screen.                                (BearOso)
- Adjusted IRQ timing slightly. Fixes Dragon Ball Z - Super
  Butouden 2.                                               (BearOso)
- Clear WAI when IRQLine is active. Fixes Top Gear 3000.    (BearOso)
- Fix reading the wrong tile data in mosaic drawing. Gets
  rid of glitch at top of FF6 battle transitions.           (BearOso)
- Win32: Don't mix garbage into the last line with NTSC
  filter.                                                   (OV2)
- Win32: Allow disabling scanlines in NTSC filter.          (BearOso)
- GTK+: Added an undo load state option.                    (BearOso)
- GTK+: Fixed compilation on big-endian systems.            (OV2)
- Win32, GTK+: Added integer scaling option.                (BearOso)
- GTK+, Unix: Preserve current joypad state when rewinding. (BearOso)

Snes9x 1.56.1
- Automatic input rate now only works for close multiples   (BearOso)
  of 60Hz.
- Win32: Cheats are now shown in the correct order in the   (BearOso)
  list view.
- GTK+: Check for version greater than 3.22 when using GTK+ (BearOso)
  3.
- GTK+: Don't resize code and description field in GTK+ 2.  (BearOso)

Snes9x 1.56
- Increased the speed of SA1 emulation to match hardware    (BearOso)
  more closely.
- Fixed negative SA1 division                               (BearOso, Jonas Quinn)
- Changed the location where we poll input to potentially   (Brunnis, BearOso)
  reduce lag.
- Fixed the interlace fields being swapped after skipping   (BearOso)
  frames.
- More updates for BS-X support.                            (LuigiBlood)
- Updated xBRZ to version 1.6.                              (zenju, OV2)
- Added a DMA timing hack for rpgone's Koryu no Mimi        (OV2)
  translation.
- Updated HDMA to not update indirect addresses until after (BearOso)
  transfers are completed.
- Improved cheats support. This stores cheats in a human-   (BearOso, OV2)