@@ -6,6 +6,7 @@ Snes9x 1.56.2
 - Clear WAI when IRQLine is active. Fixes Top Gear 3000.    (BearOso)
 - Fix reading the wrong tile data in mosaic drawing. Gets
   rid of glitch at top of FF6 battle transitions.           (BearOso)
+- Break a specific opcode into cycles. Fixes Little Magic.  (BearOso)
 - Win32: Don't mix garbage into the last line with NTSC
   filter.                                                   (OV2)
 - Win32: Allow disabling scanlines in NTSC filter.          (BearOso)
